tests/snapshots/snapshots__golden_outputs@intel-mac-i9-9880h-boxed.snap
---
source: tests/snapshots.rs
expression: "render(&cpu, mode, false)"
---
╭ Identity ──────────────────────────────────────────────╮
│ Name          Intel(R) Core(TM) i9-9880H CPU @ 2.30GHz │
│ Vendor        Intel                                    │
│ Architecture  x86_64                                   │
│ Microcode     0xf8                                     │
╰────────────────────────────────────────────────────────╯
╭ Topology ──────────────────────────────────────────────╮
│ Cores  8 physical · 16 logical · SMT ×2                │
╰────────────────────────────────────────────────────────╯
╭ Clocks ─┬──────────────────────────────────────────────╮
│         │ Cores                                        │
├─────────┼──────────────────────────────────────────────┤
│ Base    │ 2.30 GHz                                     │
╰─────────┴──────────────────────────────────────────────╯
╭ Cache ─┬───────────────────────────────────────────────╮
│ Level  │ Cores                                         │
├────────┼───────────────────────────────────────────────┤
│ L1i    │ 32 KiB / core                                 │
│ L1d    │ 32 KiB / core                                 │
│ L2     │ 256 KiB / core                                │
│ L3     │ 16 MiB / 8 cores                              │
╰────────┴───────────────────────────────────────────────╯
╭ Features ──────────────────────────────────────────────╮
│ SIMD            SSE4.2 · AVX · AVX2 · FMA              │
│ Crypto          AES · PCLMUL · RDRAND · RDSEED         │
│ Virtualization  VT-x                                   │
│ Security        SMEP · SMAP                            │
╰────────────────────────────────────────────────────────╯
